<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WarmUpFrontEnd</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome, please login or create a new account</string>
    <string name="editUserHint">-username-</string>
    <string name="editPasswordHint"></string>
    <string name="user">user:</string>
    <string name="password">password:</string>
    <string name="add">Add New User</string>
    <string name="login">Login</string>
    <string name="title_activity_logged_in">LoggedInActivity</string>

</resources>